Grammar, app update

--- a/letters/jan2020/index.html
+++ b/letters/jan2020/index.html
@@ -68,7 +68,7 @@ Welcome to the brainlife.io newsletter!
 </p>
 
 <p>
-We will use this newsletter to share the evolving story of our open neuroscience platform with you and keep you informed of any major changes or updates that could benefit your work. Read on to learn more about some members of our brainlife community and learn about the latest additions to the platform.
+We will use this newsletter to share the evolving story of our open neuroscience platform with you and keep you informed of any major changes or updates that could benefit your work. Read on to learn more about some members of our brainlife community and the latest additions to the platform.
 </p>
 
 <hr>
@@ -89,7 +89,7 @@ Check out a few of the many users in the brainlife community, including some who
 Graduate student in psychology, Northwestern University
 </h4>
 <p>
-Alexis was looking for ways to efficiently handle batch processing of neuroimaging data without having to worry about storage issues or slowing down local systems. She's finding the pipelines useful but is still in the early stages of designing the next steps for preprocessing.
+Alexis was looking for ways to efficiently handle batch processing of neuroimaging data without having to worry about storage issues or slowing down local systems. Alexis is finding the pipelines useful but is still in the early stages of designing the next steps for preprocessing.
 </p>
 
 <h3>🧑 Alice Quiao</h3>
@@ -97,19 +97,19 @@ Alexis was looking for ways to efficiently handle batch processing of neuroimagi
 PhD student in social psychology, University of Southern California
 </h4>
 <p>
-New to neuroimaging, Alice used brainlife.io to help her practice resting state analyses using FSL and to find instructions on setting up fMRI parameters for her class project. Although new to brain imaging, Alice hopes to one day host her own study using fMRI.
+New to neuroimaging, Alice used brainlife.io to practice resting state analyses using FSL and to find instructions on setting up fMRI parameters for a class project. Although new to brain imaging, Alice hopes to one day host a study using fMRI.
 </p>
 
 <h3>🧑 Elouise Koops</h3>
 <h4>PhD student in audiology & neuroscience, University Medical Center Groningen</h4>
 <p>
-Elouise found out about the platform two years ago when brainlife.io's Franco Pestilli presented it to her class. Since she's already processed her data in a manner similar to an AFQ, but coded locally, she wanted to see if the data processing results would differ on brainlife.io's server.
+Elouise found out about the platform two years ago in class when brainlife.io's Franco Pestilli presented it. Elouise has already processed data in a manner similar to an AFQ but wanted to see if the data processing results would differ on brainlife.io's server.
 </p>
 
 <h3>🧑 Shubhom Bhattacharya</h3>
 <h4>Graduate student in engineering, Cornell University</h4>
 <p>
-Shubhom is using ds000171 to look at fMRI scans of depressed patients and evaluating various deep learning algorithms' effectiveness in diagnosing these scans, potentially establishing some "symptoms" of depression. He is using brainlife.io's image preprocessing service to do this.
+Shubhom is using ds000171 to look at fMRI scans of depressed patients and evaluating various deep learning algorithms' effectiveness in diagnosing these scans, potentially establishing some "symptoms" of depression.
 </p>
 
 <hr>
@@ -118,7 +118,7 @@ Shubhom is using ds000171 to look at fMRI scans of depressed patients and evalua
 
 <h3>Datasets</h3>
 <p>
-A new feature has been developed as part of recently started project in collaboration with DataLad. brainlife.io’s Datasets feature allows users to select and import the DataLad datasets they need from our list. There are more than 300 datasets that can be imported using this new feature!
+The Datasets feature was developed as part of a new project in collaboration with <a href="https://www.datalad.org">DataLad</a>. brainlife.io’s Datasets feature allows users to select and import the DataLad datasets they need from our liss -- with more than 300 datasets that can be imported!
 </p>
 
 <a href="https://brainlife.io/datasets">See Live</a>
@@ -129,18 +129,14 @@ A new feature has been developed as part of recently started project in collabor
 
 <h3>Segment tractogram in to fiber categories</h3>
 <p>
-Do you have tractography that you'd like to do a quick quality check on? Perhaps you want to see if there are biologically implausible streamlines in your whole brain tractogram or if there’s a segmentation failing to find a tract of interest. This app categorizes each streamline in your tractography model according to the regions it connects (i.e. fronto-parietal), giving you a window into your data. A quick look at the relative proportions of the output categories can help you determine if your tractography has sufficient quality and if your tract of interest is likely to be found.
+Do you have tractography that you want to do a quick quality check on? Maybe you want to see if there are biologically implausible streamlines in your whole brain tractogram or if there’s a segmentation failing to find a tract of interest. This app categorizes each streamline in your tractography model according to the regions it connects (i.e. fronto-parietal), giving you a window into your data. A quick look at the relative proportions of the output categories can help you determine if your tractography has sufficient quality and if your tract of interest is likely to be found.
 </p>
 
 <a href="https://brainlife.io/app/5dc9d8ee5017f0bde0519db5">See the App</a>
 
 <h3>fMRIPrep</h3>
 <p>
-This app runs fMRIPrep on the brainlife.io interface. Its pipelines process T1w, T2w, fMRI, and fieldmaps by calling a series of functions from FSL, FreeSurfer, ANTs, and nipy. It applies these tools in a principled way designed to handle common imaging artifacts and biases, and it outputs processed anatomical and functional images for further analysis. // why do you need to preprocess to begin with -- imaging who’s going to be reading this -- those data needs to be cleaned and realined even though FRMI is the best mode of processing mri data -- segue into why they need preprcoessing and why to do it on brainlife and then how it works
-</p>
-
-<p>
-Please note, this app is in beta and it needs testers.
+This app runs fMRIPrep on the brainlife.io interface. Its pipelines process T1w, T2w, fMRI, and fieldmaps by calling a series of functions from FSL, FreeSurfer, ANTs, and nipy. It applies these tools in a principled way designed to handle common imaging artifacts and biases, and it outputs processed anatomical and functional images for further analysis.
 </p>
 
 <a href="https://brainlife.io/app/5c61c69f14027a01b14adcb3">See the App</a>
@@ -152,14 +148,14 @@ Please note, this app is in beta and it needs testers.
 <h3>Human white matter microstructure predicts elite sports participation</h3>
 
 <p>
-Bradley Caron, a brainlife.io developer and graduate student at Indiana University Bloomington, has published his first preprint, “Human white matter microstructure predicts elite sports participation.” Caron and his team performed their analyses on brainlife.io and released the code and data derivatives there for others to replicate.
+Bradley Caron, a brainlife.io developer and graduate student at Indiana University Bloomington, has published his first preprint, “Human white matter microstructure predicts elite sports participation.” Caron's team performed their analyses on brainlife.io and released the code and data derivatives there for others to replicate.
 </p>
 
-<a href="https://brainlife.io/pub/5ce2c9ed40363b00353677d4">See the publication</a>
+<a href="https://brainlife.io/pub/5ce2c9ed40363b00353677d4">Check it out</a>
 
 <hr>
 
-<h2>Miscellaneous</h2>
+<h2>Other news</h2>
 
 <h3>Spring 2020 Neuroscience Lab at IU will feature brainlife.io</h3>
 <p>
