Added note about logging in to access OSG Connect

--- a/letters/jan2020/index.html
+++ b/letters/jan2020/index.html
@@ -171,7 +171,7 @@ The Lab in Cognitive and Computational Neuroscience course at Indiana University
 This cyberinfrastructure connects clusters from different research centers by scraping together unused computing cycles, so jobs get sent wherever there is a free computing cycle to use. Using OSG is free and frees up space on other clusters!
 </p>
 
-<a href="https://brainlife.io/resource/5931bee335530000253833d2">OSGConnect Resource</a>
+<a href="https://brainlife.io/resource/5931bee335530000253833d2">OSGConnect Resource (Note: You must be logged in to access.)</a>
 
 <hr>
 
