--- a/letters/jan2020/index.html
+++ b/letters/jan2020/index.html
@@ -89,7 +89,7 @@ Check out a few of the many users in the brainlife community, including some who
 Graduate student in psychology, Northwestern University
 </h4>
 <p>
-Alexis was looking for ways to efficiently handle batch processing of neuroimaging data without having to worry about storage issues or slowing down local systems. Alexis is finding the pipelines useful but is still in the early stages of designing the next steps for preprocessing.
+Alexis was looking for ways to efficiently handle batch processing of neuroimaging data without having to worry about storage issues or slowing down local systems and is finding the pipelines useful but is still in the early stages of designing next steps for preprocessing.
 </p>
 
 <h3>🧑 Alice Quiao</h3>
@@ -97,7 +97,7 @@ Alexis was looking for ways to efficiently handle batch processing of neuroimagi
 PhD student in social psychology, University of Southern California
 </h4>
 <p>
-New to neuroimaging, Alice used brainlife.io to practice resting state analyses using FSL and to find instructions on setting up fMRI parameters for a class project. Although new to brain imaging, Alice hopes to one day host a study using fMRI.
+New to neuroimaging, Alice used brainlife.io to practice resting state analyses using FSL and to find instructions on setting up fMRI parameters for a class project. Alice hopes to one day host a study using fMRI.
 </p>
 
 <h3>🧑 Elouise Koops</h3>
@@ -109,7 +109,7 @@ Elouise found out about the platform two years ago in class when brainlife.io's 
 <h3>🧑 Shubhom Bhattacharya</h3>
 <h4>Graduate student in engineering, Cornell University</h4>
 <p>
-Shubhom is using ds000171 to look at fMRI scans of depressed patients and evaluating various deep learning algorithms' effectiveness in diagnosing these scans, potentially establishing some "symptoms" of depression.
+Shubhom is using ds000171 and brainlife.io's image preprocessing service to look at fMRI scans of depressed patients and evaluate various deep learning algorithms' effectiveness in diagnosing these scans, potentially establishing some "symptoms" of depression.
 </p>
 
 <hr>
@@ -118,7 +118,7 @@ Shubhom is using ds000171 to look at fMRI scans of depressed patients and evalua
 
 <h3>Datasets</h3>
 <p>
-The Datasets feature was developed as part of a new project in collaboration with <a href="https://www.datalad.org">DataLad</a>. brainlife.io’s Datasets feature allows users to select and import the DataLad datasets they need from our liss -- with more than 300 datasets that can be imported!
+The Datasets feature was developed as part of a new project in collaboration with <a href="https://www.datalad.org">DataLad</a>. brainlife.io’s Datasets feature allows users to select and import the DataLad datasets they need from our list. More than 300 datasets that can be imported!
 </p>
 
 <a href="https://brainlife.io/datasets">See Live</a>
@@ -152,7 +152,7 @@ For those interested in collecting functional connectivity matrices, check out t
 <h3>Human white matter microstructure predicts elite sports participation</h3>
 
 <p>
-Bradley Caron, a brainlife.io developer and graduate student at Indiana University Bloomington, has published his first preprint, “Human white matter microstructure predicts elite sports participation.” Caron's team performed their analyses on brainlife.io and released the code and data derivatives there for others to replicate.
+Bradley Caron, a brainlife.io developer and PhD student at Indiana University Bloomington, has published his first preprint, “Human white matter microstructure predicts elite sports participation.” Caron's team performed their analyses on brainlife.io and released the code and data derivatives there for others to replicate.
 </p>
 
 <a href="https://brainlife.io/pub/5ce2c9ed40363b00353677d4">Check it out</a>
@@ -175,7 +175,7 @@ The Lab in Cognitive and Computational Neuroscience course at Indiana University
 This cyberinfrastructure connects clusters from different research centers by scraping together unused computing cycles, so jobs get sent wherever there is a free computing cycle to use. Using OSG is free and frees up space on other clusters!
 </p>
 
-<a href="https://brainlife.io/resource/5931bee335530000253833d2">OSGConnect Resource (Note: You must be logged in to access.)</a>
+<a href="https://brainlife.io/resource/5931bee335530000253833d2">OSG Connect Resource (Note: You must be logged in to access.)</a>
 
 <hr>
 
