--- a/letters/jan2020/index.html
+++ b/letters/jan2020/index.html
@@ -152,7 +152,7 @@ For those interested in collecting functional connectivity matrices, check out t
 <h3>Human white matter microstructure predicts elite sports participation</h3>
 
 <p>
-Bradley Caron, a brainlife.io developer and PhD student at Indiana University Bloomington, has published his first preprint, “Human white matter microstructure predicts elite sports participation.” Caron's team performed their analyses on brainlife.io and released the code and data derivatives there for others to replicate.
+Brad Caron, a brainlife.io developer and PhD student at Indiana University Bloomington, has published his first preprint, “Human white matter microstructure predicts elite sports participation.” Caron's team performed their analyses on brainlife.io and released the code and data derivatives there for others to replicate.
 </p>
 
 <a href="https://brainlife.io/pub/5ce2c9ed40363b00353677d4">Check it out</a>
@@ -167,7 +167,7 @@ The Lab in Cognitive and Computational Neuroscience course at Indiana University
 </p>
 
 <p>
-<a href="mailto:franpest@indiana.edu">Dr. Franco Pestilli</a> and Bradley Caron will teach this course.
+<a href="mailto:franpest@indiana.edu">Dr. Franco Pestilli</a> and Brad Caron will teach this course.
 </p>
 
 <h3>Have you tried OSG Connect?</h3>
