--- a/letters/jan2020/index.html
+++ b/letters/jan2020/index.html
@@ -118,7 +118,7 @@ Shubhom is using ds000171 and brainlife.io's image preprocessing service to look
 
 <h3>Datasets</h3>
 <p>
-The Datasets feature was developed as part of a new project in collaboration with <a href="https://www.datalad.org">DataLad</a>. brainlife.io’s Datasets feature allows users to select and import the DataLad datasets they need from our list. More than 300 datasets that can be imported!
+The Datasets feature was developed as part of a new project in collaboration with <a href="https://www.datalad.org">DataLad</a>. brainlife.io’s Datasets feature allows users to select and import the DataLad datasets they need from our list. There are more than 300 datasets that can be imported using this feature!
 </p>
 
 <a href="https://brainlife.io/datasets">See Live</a>
