updated cloud header

--- a/letters/march2020/index.html
+++ b/letters/march2020/index.html
@@ -122,7 +122,7 @@ While automatic segmentation methods have improved, they still aren’t high qua
 There are two brainlife.io apps connected with the preprint:
 <p>
     
-<img src="cid:img@classifyber.png" width="150px" align="right">
+<img src="cid:img@classifyber.png" width="150" style="width: 100%; max-width: 150px;" align="right">
 <h4>Classifyber</h4>
 <p>
 This app is based on binary linear classification, which simultaneously combines information from bundle geometries, connectivity patterns, and atlases. Plus, it can deal with different bundle sizes, tracking algorithms, and dMRI data qualities.
