--- a/letters/usersurvey/index.html
+++ b/letters/usersurvey/index.html
@@ -64,12 +64,12 @@ border-top-left-radius: 50%;
     <div style="padding: 0 20px; color: #444">
 
 <p>
-April 16, 2020
+April 16, 2020 | brainlife.io user surveys
 </p>
 
 <hr>
 
-<h3>Hello,</h3>
+<h3>Dear brainlife.io community,</h3>
 
 <p>
 As a registered brainlife.io user, we are inviting you to take a survey about your experience with the platform. The survey is anonymous, unless you choose to share your contact information. 
@@ -81,8 +81,7 @@ We are asking you to participate in this survey because understanding users’ n
 This survey will run until July 1 and take you approximately 5 to 10 minutes to complete. Before you begin, you will read a Study Information Sheet about this study. 
 </p>
 <p>
-You can take the short survey here: [Click here to begin the survey](https://iu.co1.qualtrics.com/jfe/form/SV_0jozJ2vl9OkJSbb).
-</p>
+You can take the short survey here: <a href="https://iu.co1.qualtrics.com/jfe/form/SV_0jozJ2vl9OkJSbb">Click here to begin the survey</a>.
 <p>
 Please let us know if you have any questions. 
 </p>
