grammar, wording updates

--- a/letters/april2020/index.html
+++ b/letters/april2020/index.html
@@ -63,7 +63,7 @@ border-top-left-radius: 50%;
     <div style="padding: 0 20px; color: #444">
 
 <p>
-April 29, 2020 | Latest brainlife.io news
+April 29, 2020 | Important brainlife.io updates
 </p>
 
 <hr>
@@ -75,12 +75,12 @@ April 29, 2020 | Latest brainlife.io news
 Many users have recently joined <a href="https://brainlife.io/">brainlife.io</a> in search of cloud-computing resources for their neuroimaging analyses during lockdowns. <a href="mailto:smcgavin@iu.edu">Let us know</a> if we can help you implement your workflow if you are performing analyses not currently available on the platform.
 </p>
 <p>
-To get started, <a href="https://brainlife.io/docs/user/started/">check out our documentation</a>. If you haven’t already, <a href="https://brainlife-inviter.herokuapp.com/join">join the brainlife.io community</a> on Slack.
+To get started, <a href="https://brainlife.io/docs/user/started/">check out our documentation</a> and be sure to <a href="https://brainlife-inviter.herokuapp.com">join the brainlife.io community</a> on Slack.
 </p>
         
 <h3>Decide on the brainlife.io you want: take the user survey</h3>
 <p>
-You have probably seen a recent email from brainlife.io asking you to participate in a [LINK TO SURVEY PAGE]user survey. We want to improve the platform based on your needs and requests! You can [LINK TO SURVEY PAGE] learn more about the survey here or [LINK TO USER SURVEY]take it now.
+You have probably seen a recent email from brainlife.io asking you to participate in a <a href="https://iu.co1.qualtrics.com/jfe/form/SV_0jozJ2vl9OkJSbb">user survey</a>. We want to improve the platform based on your needs and requests! You can [LINK TO SURVEY PAGE] learn more about the survey here or <a href="https://iu.co1.qualtrics.com/jfe/form/SV_0jozJ2vl9OkJSbb">take it now.</a>.
 </p>
         
 <h3>brainlife.io team member wins teaching assistant award</h3>
@@ -150,7 +150,7 @@ Find out who recently joined your brainlife.io community.
 
 <h3>🧑 Innocent Aforlabi-Logoh (@Innocent Aforlabi-Logoh on Slack)</h3>
 <h4>
-Recently received a Master of Science in Advanced Neuroimaging, University College London
+Master of Science in Advanced Neuroimaging Graduate, University College London
 </h4>
 <p>
 Innocent just completed their degree and was in search of PhD opportunities when they came across brainlife.io. A diagnostic radiographer by profession, Innocent is hoping the brainlife.io community on Slack will be helpful academically and professionally. 
@@ -164,7 +164,7 @@ Research Scientist, Oregon Health and Science University
 Sam is currently processing MRI data for a few different collaborative projects. They joined the brainlife.io Slack channel to stay informed about packages such as FreeSurfer, FSL, and HCP, since they use a variety of those tools, as well as to lean on the brainlife.io community for debugging or other issues with the tools.
 </p>
 
-<h3>🧑 Krishna Prasad A S @Krishna Prasad A S</h3>
+<h3>🧑 Krishna Prasad @Krishna Prasad A S</h3>
 <h4>
 Data Scientist, Societe Generale
 </h4>
