--- a/letters/april2020/index.html
+++ b/letters/april2020/index.html
@@ -63,7 +63,7 @@ border-top-left-radius: 50%;
     <div style="padding: 0 20px; color: #444">
 
 <p>
-April 29, 2020 | Important brainlife.io updates
+April 30, 2020 | Important brainlife.io updates
 </p>
 
 <hr>
@@ -158,8 +158,16 @@ Master of Science in Advanced Neuroimaging Graduate, University College London
 <p>
 Innocent just completed their degree and was in search of PhD opportunities when they came across brainlife.io. A diagnostic radiographer by profession, Innocent is hoping the brainlife.io community on Slack will be helpful academically and professionally. 
 </p>
+        
+h3>🧑 Ignacio Rebollo (@Ignacio Rebollo)</h3>
+<h4>
+Postdoctoral Fellow, German Institute of Human Nutrition 
+</h4>
+<p>
+Ignacio wants to use brainlife.io to preprocess openly available datasets and potentially learn new modalities with the platform's MRI tools. Ignacio is planning to begin a cortical thickness analysis and can use brainlife.io to obtain the Free Surfer segmentation or try out the HCP pipepline.
+</p>
 
-<h3>🧑 Krishna Prasad @Krishna Prasad A S</h3>
+<h3>🧑 Krishna Prasad (@Krishna Prasad A S)</h3>
 <h4>
 Data Scientist, Societe Generale
 </h4>
