--- a/letters/april2020/index.html
+++ b/letters/april2020/index.html
@@ -159,7 +159,7 @@ Master of Science in Advanced Neuroimaging Graduate, University College London
 Innocent just completed their degree and was in search of PhD opportunities when they came across brainlife.io. A diagnostic radiographer by profession, Innocent is hoping the brainlife.io community on Slack will be helpful academically and professionally. 
 </p>
         
-h3>🧑 Ignacio Rebollo (@Ignacio Rebollo)</h3>
+<h3>🧑 Ignacio Rebollo (@Ignacio Rebollo)</h3>
 <h4>
 Postdoctoral Fellow, German Institute of Human Nutrition 
 </h4>
