--- a/letters/april2020/index.html
+++ b/letters/april2020/index.html
@@ -80,7 +80,7 @@ To get started, <a href="https://brainlife.io/docs/user/started/">check out our 
         
 <h3>Decide on the brainlife.io you want: take the user survey</h3>
 <p>
-You have probably seen a recent email from brainlife.io asking you to participate in a <a href="https://brainlife.io/usersurvey">user survey</a>. We want to improve the platform based on your needs and requests! You can <a href="https://brainlife.io/usersurvey">learn more about the survey here</a> or <a href="https://iu.co1.qualtrics.com/jfe/form/SV_0jozJ2vl9OkJSbb">take it now.</a>.
+You have probably seen a recent email from brainlife.io asking you to participate in a <a href="https://brainlife.io/usersurvey">user survey</a>. We want to improve the platform based on your needs and requests! You can <a href="https://brainlife.io/usersurvey">learn more about the survey here</a> or <a href="https://iu.co1.qualtrics.com/jfe/form/SV_0jozJ2vl9OkJSbb">take it now</a>.
 </p>
         
 <h3>brainlife.io team member wins teaching assistant award</h3>
